--- a/src/moderation/locale/ru/LC_MESSAGES/django.po
+++ b/src/moderation/locale/ru/LC_MESSAGES/django.po
@@ -1,15 +1,12 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Django application: Moderation
 # Hexchan <hexchan16@gmail.com>, 2019.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: MODERATION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-28 13:00+0000\n"
-"PO-Revision-Date: 2019-01-28 16:00+0300\n"
+"POT-Creation-Date: 2019-02-04 12:49+0000\n"
+"PO-Revision-Date: 2019-02-04 16:04+0300\n"
 "Last-Translator: Hexchan <hexchan16@gmail.com>\n"
 "Language-Team: русский <>\n"
 "Language: ru\n"
@@ -23,6 +20,19 @@ msgstr ""
 #: moderation/apps.py:7
 msgid "Moderation"
 msgstr "Модерация"
+
+#: moderation/exceptions.py:10
+msgid "Your post contains inappropriate text"
+msgstr "Ваше сообщение содержит некорректный текст"
+
+#: moderation/exceptions.py:16
+msgid "Your post contains inappropriate images"
+msgstr "Ваше сообщение содержит некорректные изображения"
+
+#: moderation/exceptions.py:23
+#, python-format
+msgid "You were banned for %(reason)s until %(active_until)s"
+msgstr "Вы забанены за %(reason)s до %(active_until)s"
 
 #: moderation/models.py:12
 msgid "IP address"
